<resources>
    <string name="app_name">WGUTermTracker</string>
    <string name="action_settings">Settings</string>
    <string name="current_term">Current Term</string>
    <string name="all_terms">All Terms</string>
    <string name="wgu_logo">WGU Logo</string>
    <string name="title_activity_term_viewer">Current Term</string>
    <string name="title_activity_term_list">All Terms</string>
    <string name="all_courses">All Courses</string>
    <string name="courses">courses</string>
    <string name="assessments">assessments</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="title_activity_course_list">Course List</string>
    <string name="title_activity_term_editior">Term Editor</string>
    <string name="term_name">Term Name:</string>
    <string name="save">Save</string>
    <string name="new_term">New Term</string>
    <string name="edit_term">Edit Term</string>
    <string name="term_info">Term Info</string>
    <string name="term_added">New term added.</string>
    <string name="term_updated">Term updated.</string>
    <string name="set_active">set as active term.</string>
    <string name="title_activity_course_viewer">Course Info</string>
    <string name="title_activity_course_editor">CourseEditor</string>
    <string-array name="course_status_types">
        <item>Planned</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>
    <string name="title_activity_assessment_list">Assessments</string>
    <string name="title_activity_assessment_viewer">Assessment</string>
    <string name="title_activity_assessment_editor">Edit Assessment</string>
    <string name="title_activity_course_note_list">Course List</string>
    <string name="title_activity_course_note_editor">CourseNoteEditorActivity</string>
    <string name="title_activity_course_note_viewer">CourseNoteViewerActivity</string>
</resources>
